--- a/src/main/resources/templates/objects.html
+++ b/src/main/resources/templates/objects.html
@@ -21,7 +21,7 @@
     });
 </script>
 <table>
-    <tr><th>File</th><th>Size</th><th style="width: 100px;">Action</th></tr>
+    <tr><th>File</th><th>Size</th><th style="width: 200px;">Action</th></tr>
     <tr th:each="obj : ${objects}">
         <td>
             <a th:href="@{'/s3/' + ${bucketName} + '/file/' + ${obj.key()}}"
@@ -29,6 +29,9 @@
         </td>
         <td th:text="${obj.size()}"></td>
         <td>
+            <form th:action="@{'/s3/' + ${bucketName} + '/vision/' + ${obj.key()}}" method="post" style="display:inline" target="_blank">
+                <button type="submit">Detect</button>
+            </form>
             <form th:action="@{'/s3/' + ${bucketName} + '/delete'}" method="post" style="display:inline">
                 <input type="hidden" name="key" th:value="${obj.key()}"/>
                 <button type="submit">Delete</button>
